--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   dropdown_button2: ^2.1.2
   internet_connection_checker: ^1.0.0+1
-
+  flutter_swiper_view: ^1.1.8
   
 
 dev_dependencies:
